<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	tools:context=".MainActivity">
	<Spinner
		android:id="@+id/muses_spinner"
		android:layout_width="match_parent"
		android:layout_height="60dp"/>
	<LinearLayout
		android:id="@+id/topBTNbar"
		android:layout_width="match_parent"
		android:layout_height="45dp"
		android:orientation="horizontal">
		<Button
			android:id="@+id/refresh"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/refresh"/>
		<Button
			android:id="@+id/connect"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/connect"/>
		<Button
			android:id="@+id/disconnect"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/disconnect"/>
	</LinearLayout>

	<android.support.constraint.ConstraintLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent">

		<TextView
			android:id="@+id/convo_view"
			android:layout_width="0dp"
			android:layout_height="0dp"
			android:text="TextView"
			app:layout_constraintBottom_toTopOf="@+id/message_view"
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintRight_toRightOf="parent"
			app:layout_constraintTop_toTopOf="parent"/>
		<TextView
			android:id="@+id/message_view"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:text="TextView"
			app:layout_constraintBottom_toTopOf="@id/bottomBTNbar"
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintRight_toRightOf="parent"/>
		<LinearLayout
			android:id="@+id/bottomBTNbar"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginBottom="8dp"
			android:orientation="horizontal"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintRight_toRightOf="parent">
			<Button
				android:id="@+id/send_btn"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginStart="16dp"
				android:layout_marginLeft="16dp"
				android:layout_marginEnd="8dp"
				android:layout_marginRight="8dp"
				android:layout_weight="1"
				android:text="@string/send_btn"/>
			<Button
				android:id="@+id/reset"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginStart="8dp"
				android:layout_marginLeft="8dp"
				android:layout_marginBottom="8dp"
				android:layout_weight="1"
				android:text="@string/reset"/>
			<Button
				android:id="@+id/pause"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:text="@string/pause"/>
		</LinearLayout>
	</android.support.constraint.ConstraintLayout>
</LinearLayout>